# ampa

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/ampa/: CMakeLists.txt
libs/ampa/include/ampa/lex/: Token.h
libs/ampa/include/ampa/lex/analyzer/: LexicalAnalyzer.h
libs/ampa/include/ampa/lex/analyzer/impl/: DoubleBufferLexicalAnalyzer.h  StringDoubleBufferLexicalAnalyzer.h
libs/ampa/include/ampa/lex/lexicon/: Lexicon.h
libs/ampa/include/ampa/lex/lexicon/impl/: SimpleMapLexicon.h
libs/ampa/include/ampa/lex/scanner/: Scanner.h
libs/ampa/include/ampa/lex/scanner/impl/: FileScanner.h  StringScanner.h
libs/ampa/src/ampa/lex/analysis/impl/: DoubleBufferLexicalAnalyzer.cpp  StringDoubleBufferLexicalAnalyzer.cpp
libs/ampa/src/ampa/lex/lexicon/impl/: SimpleMapLexicon.cpp
libs/ampa/src/ampa/lex/scanner/: Scanner.cpp
libs/ampa/src/ampa/lex/scanner/impl/: FileScanner.cpp  StringScanner.cpp
notes/how-to-proove-it/: intro.pf
outputs/x86_64/executables/: ampa_scanner  tests
samples/: baby_rudin.txt  samples.txt
scratch-examples/: algebra.ampa  ampa_scanner  basic_set_theory_russells_not_accounted.ampa  definition.pf  foo  output.scanned  set_theory.pf  test.prof  test.prof.scanned  testtest.prof
scratch-examples/baby_rudin/: chapter_1.ampa
tests/: CMakeLists.txt
tests/ampa/lex/lexicon/impl/: SimpleMapLexiconTest.cpp
tests/ampa/lex/scanner/: ScannerTest.cpp
tests/ampa/lex/scanner/impl/: ScannerTest.cpp
tools/: CMakeLists.txt  Executable_Config.h.in  ampa_scanner.cpp
